# citigo-charge-monitor

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-compose-build.yml
citigo-charge-monitor-api-server/: .env  Cargo.toml  Dockerfile  log4rs.yml  sqlx-data.json
citigo-charge-monitor-api-server/migrations/: 20220318135806_create_tables.sql
citigo-charge-monitor-api-server/src/: config.rs  error.rs  lib.rs  main.rs  models.rs
citigo-charge-monitor-api-server/src/routes/: auth.rs  charge_session.rs  health.rs  mod.rs  vehicle.rs
citigo-charge-monitor-api-server/src/services/: auth.rs  charge_session.rs  mod.rs  user.rs  vehicle.rs
citigo-charge-monitor-api-server/tests/: health_check.rs
citigo-charge-monitor-front-app/: Dockerfile  nginx.conf  package-lock.json  package.json
citigo-charge-monitor-front-app/public/: index.html
citigo-charge-monitor-front-app/src/: App.vue  http-common.ts  main.ts  shims-vue.d.ts
citigo-charge-monitor-front-app/src/components/: ChargeSessions.vue  CurrentChargeSession.vue  TargetSocSetting.vue  VehicleStatusComp.vue
citigo-charge-monitor-front-app/src/models/: ChargeSession.ts  UserSession.ts  Vehicle.ts  VehicleStatus.ts
citigo-charge-monitor-front-app/src/services/: ApiService.ts
citigo-charge-monitor-front-app/src/stores/: store.ts  vehicle-status.ts
citigo-charge-monitor-revproxy/: nginx.conf
citigo-charge-monitor-worker/: Dockerfile  requirements.txt
citigo-charge-monitor-worker/src/: api.py  apiservice.py  main.py  schemas.py  skodaservice.py
(+2 files in other folders)
