[package]
name = "citigo-charge-monitor-api-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "citigo-charge-monitor-api-server"
version = "0.1.0"

[dependencies]
log = "0.4"
log4rs = { version = "1", features = ["compound_policy"] }
backtrace = "0.3"
lazy_static = "1.4"

actix-web = "4.1"
# See src/services/auth.rs
#actix-web-httpauth = "0.6"
actix-cors = "0.6"
deadpool-redis = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "mysql", "uuid", "chrono", "migrate", "offline"] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11"